# Z-Butler-Dashboard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  biome.json  bun.lockb  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
public/: manifest.json
public/assets/: main-BZBN_-23.js  main-BcaPbNkD.js  vendor-BysuFcG7.js  vendor-DvRGPY7j.js
resources/: main.tsx
resources/bootstrap/ssr/: main.js  ssr-manifest.json
resources/bootstrap/ssr/assets/: MainLayout-B7ry4EB3.js  MainLayout-x8ZXAsW1.js  about.lazy-BFH7YIKU.js  about.lazy-UbBwS9ve.js  index.lazy-7KsPB8M1.js  index.lazy-B-mG5-2t.js  main-CYGqacTs.css
resources/layouts/: MainLayout.tsx
resources/routes/: about.lazy.tsx  index.lazy.tsx
src/: __init__.py  server.py
src/config/: env.py
src/controllers/: main_controller.py
src/modules/home/: __init__.py  controller.py  routes.py
src/routes/: main.py
src/utils/: __init__.py  env.py
templates/: index.j2
