
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zed-dashboard"
version = "3.17"
description = "Zed dashboard to manage your server"
authors = ["DroidZed <41507665+DroidZed@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.8.1"
motor = "^3.6.0"
python-decouple-typed = "^3.11.0"
litestar = { extras = ["standard", "structlog"], version = "^2.11.0" }
litestar-vite = "^0.2.9"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[tool.pytest]
minversion = 6.0
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = ["--import-mode=importlib", "-ra -q"]
